--- a/index.html
+++ b/index.html
@@ -1,1 +1,62 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+
+    <meta charset="UTF-8">
+    <title>About Me - Carlos Velasquez</title>
+    <link rel="stylesheet" href="css/styles.css">
+
+</head>
+
+<body>
+
+    <header>
+
+        <h1>Welcome to My Website!</h1>
+
+    </header>
+
+
+    <section id="about-me">
+        <h2>About Me</h2>
+        <p>Hi, I'm Carlos! I'm a student at Lone Star College learning how to program a website, in python, and hopefully C++.
+        I was born and raised in Houston, Texas. It will forever be my home, and I don't plan on moving anytime soon. 
+        <br>I love playing video games, going to the gym, and spending time with family. Welcome to my personal website!</p>
+    </section>
+
+
+    <section id="certifications">
+        <h2>My Certifications</h2>
+
+        <ul>
+            <li>Certification 1: Linux Professional Institute Linux Essentials Certification</li>
+            <li>Certification 2: CompTIA ITF+ Fundamentals Cetificaiton</li>
+        </ul>
+
+    </section>
+
+
+    <section id="Future Goals">
+        <h2>Future Goals</h2>
+
+        <ul>
+            <li>Having more certifications</li>
+            <li>Become an AI developer in Python</li>
+            <li>Learn how to program in muliple languages</li>
+            <li>Finishing Associates of Applied Sciences Degree in Computer Programming</li>
+            <li>Getting a Bachelors in Computer Engineering</li>
+        </ul>
+
+    </section>
+
+
+    <footer>
+    
+        <p>Carlos Velasquez Website 2024</p>
+
+    </footer>
+
+</body>
+
+</html>
